# localtester2

./: .env.example  .gitignore  README.md  implementation-plan-hint-image-coordinate-detection-v2.md  implementation-plan-hint-image-coordinate-detection.md  implementation-plan-persist-action-delay.md  implementation-plan-scenario-list-fix-v2.md  implementation-plan-scenario-list-not-showing.md  implementation-plan-scenario-management-v2.md  implementation-plan-scenario-management.md  implementation-plan-supabase-google-auth.md  implementation-plan-test-step-image-hints.md  implementation-plan-test-success-failure-detection.md  implementation-plan-ui-blocking-fix-v2.md  implementation-plan-ui-blocking-fix-v3.md  implementation-plan-ui-blocking-fix-v4.md  implementation-plan-ui-blocking-fix.md  implementation-plan-xenotester.md  implementation-plan.md  implementation-status-hint-image-coordinate-detection.md  package-lock.json  package.json  result.html  settings.html  test-result-judgment-plan.md  vite.config.ts
.github/workflows/: release.yml
docs/: index.html
src/: App.vue  result-main.ts  settings-main.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_scenarios.sql  002_create_step_images.sql  003_create_settings.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: config.rs  control.rs  input.rs  mod.rs  permission.rs  screenshot.rs  template_match.rs  webhook.rs
src-tauri/src/services/: capture.rs  image_processor.rs  keyboard.rs  mod.rs  mouse.rs  template_matcher.rs
src-tauri/src/utils/: hotkey.rs  mod.rs
src/__tests__/: ScenarioForm.test.ts  ScenarioList.test.ts  SettingsPage.test.ts  StopButton.component.test.ts  UserMenu.test.ts  actionDelayPersistence.test.ts  actionValidator.test.ts  agentLoop.screenChange.test.ts  agentLoop.test.ts  asyncCommands.test.ts  batchExecution.test.ts  executionModePersistence.test.ts  hintImages.test.ts  repeatModeExecution.test.ts  resultJudge.test.ts  resultWindowService.test.ts  scenarioDatabase.test.ts  scenarioRunner.test.ts  scenarioTypes.test.ts  stopButton.test.ts  useActionDelay.test.ts  useExecutionMode.test.ts  useStopButton.test.ts  webhookService.test.ts
src/components/: DeleteConfirmDialog.vue  LoginPage.vue  ScenarioForm.vue  ScenarioList.vue  StopButton.vue  UpdateNotification.vue  UserMenu.vue
src/composables/: useActionDelay.ts  useExecutionMode.ts  useStopButton.ts  useUpdater.ts
src/constants/: actionDelay.ts  executionMode.ts  hintImages.ts
src/pages/: ResultPage.vue  SettingsPage.vue
src/services/: actionValidator.ts  agentLoop.ts  authService.ts  claudeClient.ts  historyManager.ts  index.ts  resultJudge.ts  (+8 more)
supabase/: config.toml
(+13 files in other folders)
